// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be greedy 1`] = `
Object {
  "areas": Object {
    "post_expression": Array [],
    "pre_expression": Array [
      "module.exports = 10;",
    ],
    "var": "12",
  },
}
`;

exports[`should match a definition with optionals 1`] = `
Object {
  "areas": Object {
    "optional_found": Array [],
    "value": Object {
      "entries": Array [
        Object {
          "key": Object {
            "property": "id",
          },
          "value": Object {
            "type_description": "hey",
          },
        },
      ],
    },
    "var": "result",
  },
}
`;

exports[`should match a definition with provided optionals 1`] = `
Object {
  "areas": Object {
    "optional_found": Array [
      "result.name = 'Cool';",
    ],
    "value": Object {
      "entries": Array [
        Object {
          "key": "id",
          "value": "hey",
        },
      ],
    },
    "var": "result",
  },
}
`;

exports[`should match a mix between defined and rest entries 1`] = `
Object {
  "areas": Object {
    "entries": Array [
      Object {
        "key": "fp",
        "type_description": "hi",
      },
    ],
    "id": "\\"hey\\"",
    "var": "result",
    "xd": Array [
      Object {
        "main": "\\"jo\\"",
      },
    ],
  },
}
`;

exports[`should match a repeated single key: value entry 1`] = `
Object {
  "areas": Object {
    "entries": Array [
      Object {
        "key": "id",
        "type_description": "hey",
      },
      Object {
        "key": "xd",
        "type_description": "jo",
      },
      Object {
        "key": "fp",
        "type_description": "hi",
      },
    ],
    "var": "result",
  },
}
`;

exports[`should match a simple sequelize definition 1`] = `
Object {
  "areas": Object {
    "model": "Price",
    "model_definition": Object {
      "entries": Array [
        Object {
          "key": "id",
          "value": "{
  type: DataTypes.UUID,
  primaryKey: true,
  defaultValue: DataTypes.UUIDV4,
  allowNull: false,
  autoIncrement: false
}",
        },
        Object {
          "key": "shape",
          "value": "DataTypes.STRING",
        },
        Object {
          "key": "color",
          "value": "DataTypes.STRING",
        },
        Object {
          "key": "clarity",
          "value": "DataTypes.STRING",
        },
        Object {
          "key": "lowSize",
          "value": "DataTypes.DECIMAL",
        },
        Object {
          "key": "highSize",
          "value": "DataTypes.DECIMAL",
        },
        Object {
          "key": "caratPrice",
          "value": "DataTypes.DECIMAL",
        },
        Object {
          "key": "date",
          "value": "DataTypes.STRING",
        },
      ],
    },
    "model_name": "Price",
  },
}
`;

exports[`should match a single key: value entry 1`] = `
Object {
  "areas": Object {
    "key": "id",
    "type_description": "hey",
    "var": "result",
  },
}
`;

exports[`should match function call with variable arguments 1`] = `
Object {
  "areas": Object {
    "arguments": Array [
      "\\"Current working directory:\\"",
      "process.cwd()",
    ],
  },
}
`;

exports[`should match multiple expression 1`] = `
Object {
  "areas": Object {
    "expressions": Array [
      "let x = 10;",
      "let y = Math.random();",
      "let z = x * y;",
    ],
    "var": "z",
  },
}
`;

exports[`should match objects in any order 1`] = `
Object {
  "areas": Object {
    "var": "result",
  },
}
`;

exports[`should work with multiple repeats 1`] = `
Object {
  "areas": Object {
    "post": Array [
      "post_statement();",
      "post_statement2();",
    ],
    "pre": Array [
      "pre_statement();",
      "pre_statement2();",
    ],
  },
}
`;
